# CBVM

./: Cargo.toml  README.md  bytecode.cb  bytecode.cbasm  bytecode.cbvm  bytecode.txt  helloworld.casm  helloworld.cb  helloworld.cbasm  t.py  t.rs
src/: lib.rs  main.rs
src/asm/: mod.rs
src/builder/: bytes.rs
src/bytecode/: data.rs  mod.rs  ops.rs  types.rs
src/engine/: bytecode.cbvm  callstack.rs  memory.rs  mod.rs  regs.rs  stdio.rs
src/reader/: mod.rs
