[package]
name = "cbvm"
version = "0.1.3"
edition = "2021"
authors = ["Sam Buckley samuel_buckley@outlook.com"]
description = "Cross bytes virtual machine used for building, running and reading CBVM files"
license = "AGPL-3.0"
repository = "https://github.com/sam-buckley/cbvm"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/lib.rs"
name = "cbvm"

[dependencies]
